--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   Deploy-Staging:
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     environment: staging
     runs-on: ubuntu-latest
     steps:
@@ -15,6 +17,8 @@ jobs:
         run: |
           echo "deploy stuff"
   Deploy-Production:
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     environment: production
     runs-on: ubuntu-latest
     steps:
