--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,3 +12,8 @@ jobs:
         name: test
         run: |
           echo ${{ github.event.before }}
+      - name: Create Atlantis Commit Status
+        uses: actions/github-script@v6
+        with:
+          script: |
+            console.log(JSON.stringify(context))
