--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,8 +18,8 @@ jobs:
         with:
           script: |
             github.rest.repos.createCommitStatus({
-              owner: context.repository.name,
-              repo: context.repository.owner.login,
+              owner: context.payload.repository.name,
+              repo: context.payload.repository.owner.login,
               sha: context.sha,
               state: 'success',
               description: 'dummy commit status for merge group',
