--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,6 @@ name: Tests
 
 on:
   push:
-  pull_request:
 
 permissions:
   statuses: write
@@ -21,8 +20,8 @@ jobs:
           github-token: ${{ secrets.G_TOKEN }}
           script: |
             github.rest.repos.createCommitStatus({
-              owner: context.payload.repository.name,
-              repo: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              owner: context.payload.repository.owner.login,
               sha: context.sha,
               state: 'success',
               description: 'dummy commit status for merge group',
