--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,11 +19,15 @@ jobs:
         with:
           github-token: ${{ secrets.G_TOKEN }}
           script: |
-            github.rest.repos.createCommitStatus({
-              repo: context.payload.repository.name,
+            const updateStatus = (statusName) => github.rest.repos.createCommitStatus({
               owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
               sha: context.sha,
               state: 'success',
               description: 'dummy commit status for merge group',
-              context: 'merge_group'
+              context: statusName
             });
+            await Promise.all([
+              updateStatus('atlantis/apply'),
+              updateStatus('atlantis/plan'),
+            ]);
