--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Create Atlantis Commit Status
         uses: actions/github-script@v6
         with:
+          hello: ${{ github.ref == 'main' }}
           script: |
             github.rest.repos.createCommitStatus({
               owner: context.payload.repository.name,
