--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
           echo ${{ github.event.before }}
           echo "hello=true" >> "$GITHUB_OUTPUT"
       - name: Create Atlantis Commit Status
-        if: steps.test.outputs.hello
+        if: ${{ steps.test.outputs.hello == 'true' }}
         uses: actions/github-script@v6
         with:
           hello: ${{ github.ref == 'main' }}
